# Unattended-Object-Detection

./: debug_inference.py  main.py  manage_jobs.sh  model.py  model1_logic.py  pyproject.toml  run_client.slurm  run_client_v2.slurm  run_debug.slurm  run_flask.slurm  run_master.slurm  run_triton.slurm  test.py  triton_client.py
model_repository/rtdetr/: config.pbtxt
model_repository/rtdetr/1/: model.onnx
